Prevent horiz scrollbar in left panel on Windows
Cheap hack for now, look into whether the scrollbar width isn't being
calculated correctly on Windows later

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -286,6 +286,7 @@ input:focus {
 // Needed for scroll it seems
 #search-outer {
     overflow-y: auto;
+    overflow-x: hidden;
     width: 100%;
 }
 
